[tool.poetry]
name = "test-zenml"
version = "0.1.0"
description = ""
authors = ["Viktor Kazachenko <viktor2001111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
zenml = {extras = ["server"], version = "^0.55.4"}
#clearml = "^1.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
